--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
      
-        <img src="{{site.baseurl}}/_assets/images/logo.png" alt="Logo" />
+        <img src="{{site.baseurl}}/assets/images/logo.png" alt="Logo" />
         
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
